--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node server-better.js",
+    "start:sqlite3": "node server.js",
+    "dev": "nodemon server-better.js",
+    "dev:sqlite3": "nodemon server.js",
     "init-db": "node scripts/init-db.js",
-    "build": "echo 'No build step required for static frontend'",
-    "postinstall": "npm run init-db"
+    "build": "echo 'Using better-sqlite3 for better compatibility'",
+    "postinstall": "echo 'Dependencies installed successfully'"
   },
   "engines": {
     "node": ">=16.0.0",
@@ -18,6 +20,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
+    "better-sqlite3": "^8.7.0",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2"
   },
