--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,12 +2,11 @@ version: '3.8'
 
 services:
   baby-worksheet:
-    build: .
+    image: ghcr.io/your-username/baby-worksheet:latest
     ports:
       - "3001:3001"
     volumes:
       - baby_data:/app/data
-    user: "1001:1001"
     environment:
       - NODE_ENV=production
       - DB_PATH=/app/data/database.sqlite
@@ -18,6 +17,12 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 256M
 
 volumes:
   baby_data:
