feat(server): 添加调试模式和数据库诊断功能
- 引入DEBUG_MODE环境变量控制调试日志输出
- 添加数据目录自动创建功能
- 实现数据库连接时的详细错误诊断
- 为API端点添加请求/响应调试日志
- 新增数据库诊断函数用于检查表结构和数据

--- a/.dockerignore
+++ b/.dockerignore
@@ -4,9 +4,20 @@ npm-debug.log
 .gitignore
 README.md
 .env
+.env.local
+.env.*.local
 .nyc_output
 coverage
 .DS_Store
 *.log
 daily_worksheet.zip
 .github
+# 排除本地資料庫檔案（容器內會重新初始化）
+database.sqlite
+data/database.sqlite
+# 排除開發工具檔案
+.vscode
+.idea
+*.swp
+*.swo
+*~
